--- a/Pipfile
+++ b/Pipfile
@@ -5,6 +5,11 @@ name = "pypi"
 
 [packages]
 atri = "==0.0.78"
+fastapi = "==0.84.0"
+uvicorn = "*"
+jsonpickle = "*"
+python-multipart = "*"
+atri-utils = "*"
 
 [dev-packages]
 
